--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "hardhat-project",
-  "dependencies": {
-    "ethers": "^6.0.8"
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.5",
+    "@openzeppelin/contracts": "^4.8.2",
+    "chai": "^4.3.7",
+    "ethereum-waffle": "^4.0.10",
+    "ethers": "^5.7.2"
   }
 }
